--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,61 @@
 @import './common';
 @import './example';
+.btn-load-more.is-hidden {
+    display: none;
+}
+a {
+    text-decoration: none;
+}
+
+p {
+    margin: 0;
+}
+.gallery,
+.info {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.gallery {
+    margin-left: -20px;
+    padding-top: 60px;
+    justify-content: center;
+}
+
+.gallery__link {
+    margin-top: 20px;
+    margin-left: 20px;
+    min-width: 320px;
+    flex-basis: calc((100% - 80px) / 4);
+    border: 2px solid rgb(241, 238, 238);
+    border-radius: 10px;
+    overflow: hidden;
+    transition: all 0.3s;
+}
+.gallery-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.gallery-item__img {
+    display: block;
+    height: 30vh;
+    object-fit: cover;
+}
+
+.info {
+    padding: 10px;
+    justify-content: space-around;
+}
+
+.info-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: black;
+}
+
+.info-item:not(:first-child) {
+    margin-left: 5px;
+}
